Minor correction on Exp2

--- a/Exp2.ipynb
+++ b/Exp2.ipynb
@@ -69,7 +69,7 @@
      "input": [
       "X = linspace(-pi,pi,30)\n",
       "Y = linspace(-pi,pi,30)\n",
-      "Y,X = meshgrid(X,Y)\n",
+      "X,Y = meshgrid(X,Y)\n",
       "Z = plottable_episode_length(X,Y)\n"
      ],
      "language": "python",
