--- a/README.org
+++ b/README.org
@@ -3,4 +3,4 @@
 [[Exp1.py]] : CSI on the inverted pendulum, parameters can be played with.
 [[Exp2.py]] : Finding out in which areas of the state space of the inverted pendulum the expert is good.
 [[Exp4.py]] : Testing different parameters for CSI on the Mountain Car
-
+[[Exp6.py]] : Trying to find a good way to plot the data of Exp5.
