Saving batch data for future LSPI training

--- a/Exp4.ipynb
+++ b/Exp4.ipynb
@@ -228,6 +228,18 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "data = mountain_car_training_data(traj_length=5,nb_traj=1000)\n",
+      "savetxt(\"mountain_car_batch_data.mat\",data)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 25
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "def mountain_car_plot( f, draw_contour=True, contour_levels=50, draw_surface=False ):\n",
       "    '''Display a surface plot of function f over the state space'''\n",
       "    pos = linspace(-1.2,0.6,30)\n",
