--- a/Exp4.ipynb
+++ b/Exp4.ipynb
@@ -225,6 +225,7 @@
      "input": [
       "def mountain_car_manual_policy(state):\n",
       "    position,speed = state\n",
+      "    if -\n",
       "    return -1. if speed <=0 else 1.\n",
       "plottable_episode_length = mountain_car_episode_vlength(mountain_car_manual_policy)\n",
       "X = linspace(-1.2,0.6,30)\n",
@@ -393,8 +394,8 @@
      "input": [
       "psi=mountain_car_psi\n",
       "phi=mountain_car_phi\n",
-      "s=traj[:,:2]\n",
-      "a=traj[:,2]\n",
+      "s=TRAJS[:,:2]\n",
+      "a=TRAJS[:,2]\n",
       "#Classification\n",
       "from sklearn import svm\n",
       "clf = svm.SVC(C=1000., probability=True)\n",
@@ -402,7 +403,11 @@
       "clf_predict= lambda state : clf.predict(squeeze(state))\n",
       "vpredict = non_scalar_vectorize( clf_predict, (2,), (1,1) )\n",
       "pi_c = lambda state: vpredict(state).reshape(state.shape[:-1]+(1,))\n",
-      "clf_score = lambda sa : squeeze(clf.predict_proba(squeeze(sa[:2])))[sa[-1]]\n",
+      "def clf_score(sa):\n",
+      "    try:\n",
+      "        return squeeze(clf.predict_proba(squeeze(sa[:2])))[sa[-1]]\n",
+      "    except ValueError:\n",
+      "        return 0\n",
       "vscore = non_scalar_vectorize( clf_score,(3,),(1,1) )\n",
       "q = lambda sa: vscore(sa).reshape(sa.shape[:-1])\n",
       "#Plots de la politique de l'expert, des donn\u00e9es fournies par l'expert, de la politique du classifieur\n",
@@ -435,7 +440,20 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "ValueError",
+       "evalue": "The number of classes has to be greater than one.",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-205-79f72a7e2ad3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msvm\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mclf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msvm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSVC\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mC\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1000.\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprobability\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[0mclf_predict\u001b[0m\u001b[1;33m=\u001b[0m \u001b[1;32mlambda\u001b[0m \u001b[0mstate\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mvpredict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnon_scalar_vectorize\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mclf_predict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m/usr/lib64/python2.7/site-packages/sklearn/svm/base.pyc\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[0;32m    150\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclass_weight_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    151\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimpl\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;34m\"one_class\"\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 152\u001b[1;33m             raise ValueError(\"The number of classes has to be greater than\"\n\u001b[0m\u001b[0;32m    153\u001b[0m                              \" one.\")\n\u001b[0;32m    154\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mValueError\u001b[0m: The number of classes has to be greater than one."
+       ]
+      }
+     ],
+     "prompt_number": 205
     },
     {
      "cell_type": "code",
