RelativeEntropy on the mountian car, Exp8

--- a/README.org
+++ b/README.org
@@ -7,3 +7,4 @@
 [[Exp5.py]] : Running CSI on the mountain car and saving the policies.
 [[Exp6.py]] : Trying to find a good way to plot the data of Exp5.
 [[Exp7.py]] : Running SCIRL on the Mountain Car
+[[Exp8.py]] : Relative entropy on the mountian car.
