--- a/README.org
+++ b/README.org
@@ -8,3 +8,5 @@
 [[Exp6.py]] : Trying to find a good way to plot the data of Exp5.
 [[Exp7.py]] : Running SCIRL on the Mountain Car
 [[Exp8.py]] : Relative entropy on the mountian car.
+[[Exp9.py]] : Cascading on the data from Asterix
+
